# oz_03_collabo-004-BE

./: Dockerfile  Dockerfile.elasticsearch  Dockerfile.jenkins  LICENSE  ReadMe.md  appspec.yaml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: checks.yml
api/: paramkey.txt
api/ai_hunsoos/: ai_prompt.txt  ai_test.py  apps.py  models.py  prompt.txt  serializers.py  tests.py  urls.py  utils.py  views.py
api/ai_hunsoos/migrations/: 0001_initial.py  0002_aihunsoo_deleted_at.py  (+1 more)
api/articles/: admin.py  apps.py  models.py  s3instance.py  serializers.py  signals.py  urls.py
api/commands/: apps.py
api/comments/: admin.py  apps.py  models.py  s3instance.py  serializers.py  signals.py  urls.py
api/common/: models.py  urls.py  views.py
api/config/: settings.py  urls.py
api/notifications/: apps.py  models.py  serializers.py  signal_tests.py  signals.py  tests.py  urls.py  views.py
api/profiles/: models.py  s3instance.py  serializers.py  signals.py  tests.py  urls.py  views.py
api/reports/: apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
api/search/: search_indexes.py  serializers.py  signals.py  tests.py  urls.py  views.py
api/static/: site.webmanifest
api/tags/: models.py  serializers.py  tests.py  urls.py  views.py
api/users/: admin.py  forms.py  models.py  serializers.py  tests.py  utils.py  views.py
api/whatap/: paramkey.txt  whatap.conf  whatap_home  whatap_python
locust/: locustfile.py
(+63 files in other folders)
